add border to sidebar menu for improved visual separation

--- a/src/app/core/shell/layout/sidebar/sidebar.component.scss
+++ b/src/app/core/shell/layout/sidebar/sidebar.component.scss
@@ -13,6 +13,7 @@
 
 .menu {
   position: fixed;
+  border-right: 1px solid oklch(var(--nc));
   @media (max-width: 1024px) {
     margin-top: 60px;
   }
