--- a/src/app/core/shell/layout/sidebar/sidebar.component.html
+++ b/src/app/core/shell/layout/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
     </label>
     <ul class="menu bg-base-200 text-base-content min-h-full w-60 p-4">
       <li>
-        <a class="text-xl">
+        <a class="text-xl" routerLink="/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -35,7 +35,11 @@
         >
       </li>
       <li>
-        <a class="text-xl">
+        <a
+          class="text-xl"
+          routerLink="/genre"
+          routerLinkActive="bg-neutral-content"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -54,7 +58,11 @@
         >
       </li>
       <li>
-        <a class="text-xl">
+        <a
+          class="text-xl"
+          routerLink="/platform"
+          routerLinkActive="bg-neutral-content"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -73,7 +81,11 @@
         >
       </li>
       <li>
-        <a class="text-xl">
+        <a
+          class="text-xl"
+          routerLink="/publisher"
+          routerLinkActive="bg-neutral-content"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
