--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="dropdown dropdown-top">
-  <div tabindex="0" role="button" class="btn btn-neutral m-1">
+  <div tabindex="0" role="button" class="btn btn-neutral m-1 h-16">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       fill="none"
