--- a/src/app/shared/components/game-card/game-card.component.html
+++ b/src/app/shared/components/game-card/game-card.component.html
@@ -16,7 +16,9 @@
       </h3>
     </div>
     <div class="card-actions justify-center">
-      <button class="btn btn-neutral btn-outline w-48">Learn more</button>
+      <a [routerLink]="['/game/view', game?.id]">
+        <button class="btn btn-neutral btn-outline w-48">Learn more</button>
+      </a>
     </div>
   </div>
 </div>
