--- a/src/app/shared/components/game-card/game-card.component.scss
+++ b/src/app/shared/components/game-card/game-card.component.scss
@@ -5,13 +5,12 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
 
   &:hover {
-    transform: scale(1.05); // Slightly enlarges the card
-    background: #d6d6d6; // Slightly darkens the background
+    cursor: pointer;
+    background: #d6d6d6;
     box-shadow: 20px 20px 40px rgba(190, 190, 190, 0.8),
-      -20px -20px 40px rgba(255, 255, 255, 0.8); // Enhances the shadow
+      -20px -20px 40px rgba(255, 255, 255, 0.8);
   }
 
-  // Optional: Add animation on card load
   animation: fadeIn 0.6s ease-in-out;
 
   @keyframes fadeIn {
