--- a/src/app/modules/publisher/components/publisher-list/publisher-list.component.html
+++ b/src/app/modules/publisher/components/publisher-list/publisher-list.component.html
@@ -1,1 +1,18 @@
-<p>publisher-list works!</p>
+<div class="breadcrumbs text-sm pl-7 pb-5">
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li>Publisher</li>
+    <li>List</li>
+  </ul>
+</div>
+<div class="items-container">
+  <div class="items">
+    @for(publisher of publishers; track publisher.id) {
+    <app-general-card
+      [title]="publisher.companyName"
+      [id]="publisher.id"
+      [navigationLink]="'/publisher/list/' + publisher.id + '/games'"
+    ></app-general-card>
+    }
+  </div>
+</div>
