--- a/src/app/modules/game/components/game-view/game-view.component.html
+++ b/src/app/modules/game/components/game-view/game-view.component.html
@@ -1,1 +1,109 @@
-<p>game-view works!</p>
+<div class="game-view flex flex-col gap-6 pl-7 pr-7 pb-7">
+  <div class="breadcrumbs text-sm">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li>Game</li>
+      <li>View</li>
+    </ul>
+  </div>
+  <div class="game-view__id flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Game ID:</h2>
+    <p>{{ game.id }}</p>
+  </div>
+  <div class="game-view__key flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Game Key:</h2>
+    <p>{{ game.key }}</p>
+  </div>
+  <div class="game-view__name flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Game Name:</h2>
+    <p>{{ game.name }}</p>
+  </div>
+  <div class="game-view__description flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Description:</h2>
+    @if (game.description) {
+    <p class="w-96">
+      {{ game.description }}
+    </p>
+    } @else {
+    <p class="w-96">No description available</p>
+    }
+  </div>
+
+  <div class="game-view__price flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Price:</h2>
+    <p>${{ game.price }}</p>
+  </div>
+  @if (game.discount) {
+  <div class="game-view__price flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Discount:</h2>
+    <p>{{ game.discount }}%</p>
+  </div>
+  <div class="game-view__price-with-discount flex gap-4">
+    <h2 class="font-bold" class="font-bold w-44">Price with discount:</h2>
+    <p>${{ game.price | priceWithDiscount : game.discount }}</p>
+  </div>
+  }
+  <div class="game-view__stock flex gap-4">
+    <h2 class="font-bold w-44">Stock:</h2>
+    <p>{{ game.unitInStock }}</p>
+  </div>
+
+  <div class="game-view__action-buttons flex flex-row gap-5 mt-8">
+    <a
+      role="button"
+      class="btn game-view__document flex gap-4"
+      href="path/to/document.txt"
+      download
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
+        />
+      </svg>
+      Download Game Information</a
+    >
+    <button class="btn">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125"
+        />
+      </svg>
+      Edit
+    </button>
+    <button class="btn">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+        />
+      </svg>
+      Remove
+    </button>
+  </div>
+</div>
