--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,3 +1,8 @@
+.title {
+  padding: 0 60px;
+  margin-bottom: 30px;
+}
+
 .items-container {
   margin: 10px auto;
 }
@@ -17,14 +22,4 @@
     margin-left: 0;
     padding-left: 25px;
   }
-}
-
-.dropdown {
-  position: fixed;
-  z-index: 1;
-  bottom: 50px;
-  right: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
 }
