update general card component to center-align description text for improved layout

--- a/src/app/shared/components/general-card/general-card.component.html
+++ b/src/app/shared/components/general-card/general-card.component.html
@@ -8,7 +8,7 @@
       </h2>
     </div>
     @if (description) {
-    <p>{{ description }}</p>
+    <p class="flex items-center justify-center">{{ description }}</p>
     }
   </div>
   <figure>
