--- a/src/app/modules/genre/components/genre-list/genre-list.component.html
+++ b/src/app/modules/genre/components/genre-list/genre-list.component.html
@@ -12,7 +12,7 @@
       [title]="genre.name"
       [id]="genre.id"
       description="Show all {{ genre.name }} games"
-      [navigationLink]="'/genre/list/' + genre.id + '/games'"
+      [navigationLink]="'/genre/view/' + genre.id"
     ></app-general-card>
     }
   </div>
