--- a/src/app/modules/platform/components/platform-list/platform-list.component.html
+++ b/src/app/modules/platform/components/platform-list/platform-list.component.html
@@ -12,7 +12,7 @@
       [title]="platform.type"
       [id]="platform.id"
       description="Show all {{ platform.type }} games"
-      [navigationLink]="'/platform/list/' + platform.id + '/games'"
+      [navigationLink]="'/platform/view/' + platform.id"
     ></app-general-card>
     }
   </div>
