--- a/src/app/modules/publisher/components/publisher-list/publisher-list.component.html
+++ b/src/app/modules/publisher/components/publisher-list/publisher-list.component.html
@@ -11,7 +11,7 @@
     <app-general-card
       [title]="publisher.companyName"
       [id]="publisher.id"
-      [navigationLink]="'/publisher/list/' + publisher.id + '/games'"
+      [navigationLink]="'/publisher/view/' + publisher.id"
     ></app-general-card>
     }
   </div>
