test commit (for deploy)

--- a/src/app/core/shell/layout/footer/footer.component.html
+++ b/src/app/core/shell/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer bg-base-200 text-base-content p-10">
   <aside class="ml-20">
     <p class="text-lg font-bold">
-      Game Store Ltd.
+      Game Store
       <br />
       Online Since 2024
     </p>
