remove commented-out dropdown code from header component for cleaner markup

--- a/src/app/core/shell/layout/header/header.component.html
+++ b/src/app/core/shell/layout/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="btn btn-ghost text-2xl font-bold" href="/">Game Store</a>
   </div>
   <div class="flex-none">
-    <div class="dropdown dropdown-end">
+    <!-- <div class="dropdown dropdown-end">
       <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
         <div class="indicator">
           <svg
@@ -117,5 +117,6 @@
         </li>
       </ul>
     </div>
+  </div> -->
   </div>
 </div>
