--- a/src/app/modules/genre/components/genre-view/genre-view.component.html
+++ b/src/app/modules/genre/components/genre-view/genre-view.component.html
@@ -9,11 +9,19 @@
   <h2 class="font-bold text-2xl">Genre Details</h2>
   <div class="genre-view__id flex gap-4">
     <h2 class="font-bold" class="font-bold w-44">Genre ID:</h2>
+    @if(!isGenreLoading) {
     <p>{{ genre?.id }}</p>
+    } @else {
+    <ng-container *ngTemplateOutlet="loadingSkeleton"></ng-container>
+    }
   </div>
   <div class="genre-view__name flex gap-4">
     <h2 class="font-bold" class="font-bold w-44">Genre Name:</h2>
+    @if (!isGenreLoading) {
     <p>{{ genre?.name }}</p>
+    } @else {
+    <ng-container *ngTemplateOutlet="loadingSkeleton"></ng-container>
+    }
   </div>
   @if (genre?.parentGenreId) {
   <div class="genre-view__parent-id flex gap-4">
@@ -40,7 +48,10 @@
       </svg>
       Edit
     </button>
-    <button class="btn">
+    <button class="btn" (click)="onRemoveGenre()" [disabled]="isGenreDeleting">
+      @if (isGenreDeleting) {
+      <span class="loading loading-spinner loading-md"></span>
+      } @else {
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -55,7 +66,7 @@
           d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
         />
       </svg>
-      Remove
+      } Remove
     </button>
   </div>
   <br />
@@ -63,11 +74,23 @@
     <h2 class="font-bold text-2xl">Available {{ genre?.name }} games</h2>
     <br />
     <div class="items-container">
+      @if (areGamesLoading) {
+      <div class="flex items-center justify-center">
+        <span class="loading loading-spinner loading-lg"></span>
+      </div>
+      } @else {
       <div class="items">
         @for(game of games; track game.id) {
         <app-game-card [game]="game"></app-game-card>
+        } @empty {
+        <div class="text-center text-gray-500 pl-2">No games available</div>
         }
       </div>
+      }
     </div>
   </div>
 </div>
+
+<ng-template #loadingSkeleton>
+  <div class="skeleton h-4 w-96"></div>
+</ng-template>
