--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,5 +1,10 @@
 <h1 class="title text-2xl font-bold">Available games</h1>
 <div class="items-container">
+  @if (isLoading) {
+  <div class="loading-container">
+    <span class="loading loading-spinner loading-lg"></span>
+  </div>
+  }
   <div class="items">
     @for(game of games; track game.id) {
     <app-game-card [game]="game"></app-game-card>
