--- a/src/app/modules/platform/components/platform-list/platform-list.component.html
+++ b/src/app/modules/platform/components/platform-list/platform-list.component.html
@@ -6,6 +6,11 @@
   </ul>
 </div>
 <div class="items-container">
+  @if (isLoading) {
+  <div class="loading-container">
+    <span class="loading loading-spinner loading-lg"></span>
+  </div>
+  }
   <div class="items">
     @for(platform of platforms; track platform.id) {
     <app-general-card
