--- a/src/app/modules/publisher/components/publisher-list/publisher-list.component.html
+++ b/src/app/modules/publisher/components/publisher-list/publisher-list.component.html
@@ -6,12 +6,17 @@
   </ul>
 </div>
 <div class="items-container">
+  @if (isLoading) {
+  <div class="loading-container">
+    <span class="loading loading-spinner loading-lg"></span>
+  </div>
+  }
   <div class="items">
     @for(publisher of publishers; track publisher.id) {
     <app-general-card
       [title]="publisher.companyName"
       [id]="publisher.id"
-      [navigationLink]="'/publisher/view/' + publisher.id"
+      [navigationLink]="'/publisher/view/' + publisher.companyName"
     ></app-general-card>
     }
   </div>
