--- a/src/app/modules/publisher/components/publisher-view/publisher-view.component.html
+++ b/src/app/modules/publisher/components/publisher-view/publisher-view.component.html
@@ -9,15 +9,23 @@
   <h2 class="font-bold text-2xl">Publisher Details</h2>
   <div class="publisher-view__id flex gap-4">
     <h2 class="font-bold" class="font-bold w-44">Publisher ID:</h2>
+    @if (!isPublisherLoading) {
     <p>{{ publisher?.id }}</p>
+    } @else {
+    <ng-container *ngTemplateOutlet="loadingSkeleton"></ng-container>
+    }
   </div>
   <div class="publisher-view__name flex gap-4">
     <h2 class="font-bold" class="font-bold w-44">Company Name:</h2>
+    @if (!isPublisherLoading) {
     <p>{{ publisher?.companyName }}</p>
+    } @else {
+    <ng-container *ngTemplateOutlet="loadingSkeleton"></ng-container>
+    }
   </div>
   <div class="publisher-view__homepage flex gap-4">
     <h2 class="font-bold" class="font-bold w-44">Home Page:</h2>
-    @if (publisher?.homePage) {
+    @if (!isPublisherLoading) { @if (publisher?.homePage) {
     <a
       href="{{ publisher?.homePage }}"
       target="_blank"
@@ -27,16 +35,20 @@
     </a>
     } @else {
     <p class="w-96">Not available</p>
+    } } @else {
+    <ng-container *ngTemplateOutlet="loadingSkeleton"></ng-container>
     }
   </div>
   <div class="publisher-view__description flex gap-4">
     <h2 class="font-bold" class="font-bold w-44">Description:</h2>
-    @if (publisher?.description) {
+    @if (!isPublisherLoading) { @if (publisher?.description) {
     <p class="w-96">
       {{ publisher?.description }}
     </p>
     } @else {
     <p class="w-96">No description available</p>
+    } } @else {
+    <ng-container *ngTemplateOutlet="loadingSkeleton"></ng-container>
     }
   </div>
 
@@ -58,7 +70,14 @@
       </svg>
       Edit
     </button>
-    <button class="btn">
+    <button
+      class="btn"
+      (click)="onRemovePublisher()"
+      [disabled]="isPublisherDeleting"
+    >
+      @if (isPublisherDeleting) {
+      <span class="loading loading-spinner loading-md"></span>
+      } @else {
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -73,7 +92,7 @@
           d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
         />
       </svg>
-      Remove
+      } Remove
     </button>
   </div>
   <br />
@@ -83,11 +102,23 @@
     </h2>
     <br />
     <div class="items-container">
+      @if (areGamesLoading) {
+      <div class="flex items-center justify-center">
+        <span class="loading loading-spinner loading-lg"></span>
+      </div>
+      } @else {
       <div class="items">
         @for(game of games; track game.id) {
         <app-game-card [game]="game"></app-game-card>
+        } @empty {
+        <div class="text-center text-gray-500 pl-2">No games available</div>
         }
       </div>
+      }
     </div>
   </div>
 </div>
+
+<ng-template #loadingSkeleton>
+  <div class="skeleton h-4 w-96"></div>
+</ng-template>
