--- a/src/app/modules/game/components/game-view/game-view.component.html
+++ b/src/app/modules/game/components/game-view/game-view.component.html
@@ -118,10 +118,11 @@
   </div>
 
   <div class="game-view__action-buttons flex flex-row gap-5 mt-8">
-    <a
+    <button
       role="button"
       class="btn game-view__document flex gap-4"
       (click)="onDownloadGameFile()"
+      [disabled]="isLoading || isDownloading"
     >
       @if (isDownloading) {
       <span class="loading loading-spinner loading-md"></span>
@@ -140,9 +141,9 @@
           d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
         />
       </svg>
-      } Download Game Information</a
-    >
-    <button class="btn">
+      } Download Game Information
+    </button>
+    <button class="btn" [disabled]="isLoading">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -159,7 +160,11 @@
       </svg>
       Edit
     </button>
-    <button class="btn" (click)="onRemoveGame()" [disabled]="isDeleting">
+    <button
+      class="btn"
+      (click)="onRemoveGame()"
+      [disabled]="isLoading || isDeleting"
+    >
       @if (isDeleting) {
       <span class="loading loading-spinner loading-md"></span>
       } @else {
