--- a/src/app/modules/platform/components/platform-view/platform-view.component.html
+++ b/src/app/modules/platform/components/platform-view/platform-view.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="platform-view__action-buttons flex flex-row gap-5 mt-8">
-    <button class="btn">
+    <button class="btn" [disabled]="isPlatformLoading || isPlatformDeleting">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -45,7 +45,7 @@
     <button
       class="btn"
       (click)="onRemovePlatform()"
-      [disabled]="isPlatformDeleting"
+      [disabled]="isPlatformDeleting || isPlatformLoading"
     >
       @if (isPlatformDeleting) {
       <span class="loading loading-spinner loading-md"></span>
