--- a/src/app/modules/game/components/game-view/game-view.component.html
+++ b/src/app/modules/game/components/game-view/game-view.component.html
@@ -122,7 +122,7 @@
       role="button"
       class="btn game-view__document flex gap-4"
       (click)="onDownloadGameFile()"
-      [disabled]="isLoading || isDownloading"
+      [disabled]="isLoading || isDownloading || isDeleting"
     >
       @if (isDownloading) {
       <span class="loading loading-spinner loading-md"></span>
@@ -143,7 +143,7 @@
       </svg>
       } Download Game Information
     </button>
-    <button class="btn" [disabled]="isLoading">
+    <button class="btn" [disabled]="isLoading || isDeleting">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
