--- a/src/app/modules/genre/components/genre-view/genre-view.component.html
+++ b/src/app/modules/genre/components/genre-view/genre-view.component.html
@@ -50,7 +50,7 @@
     </button>
     <button
       class="btn"
-      (click)="onRemoveGenre()"
+      onclick="confirmDeletionDialog.showModal()"
       [disabled]="isGenreLoading || isGenreDeleting"
     >
       @if (isGenreDeleting) {
@@ -72,6 +72,22 @@
       </svg>
       } Remove
     </button>
+    <dialog id="confirmDeletionDialog" class="modal">
+      <div class="modal-box">
+        <h3 class="text-lg font-bold">
+          Are you sure you want to remove this genre?
+        </h3>
+        <p class="py-4">This action cannot be undone.</p>
+        <div class="modal-action">
+          <form method="dialog" class="flex gap-4">
+            <button class="btn">Cancel</button>
+            <button class="btn btn-error" (click)="onRemoveGenre()">
+              Remove
+            </button>
+          </form>
+        </div>
+      </div>
+    </dialog>
   </div>
   <br />
   <div>
