--- a/src/app/modules/platform/components/platform-view/platform-view.component.html
+++ b/src/app/modules/platform/components/platform-view/platform-view.component.html
@@ -44,7 +44,7 @@
     </button>
     <button
       class="btn"
-      (click)="onRemovePlatform()"
+      onclick="confirmDeletionDialog.showModal()"
       [disabled]="isPlatformDeleting || isPlatformLoading"
     >
       @if (isPlatformDeleting) {
@@ -66,6 +66,22 @@
       </svg>
       } Remove
     </button>
+    <dialog id="confirmDeletionDialog" class="modal">
+      <div class="modal-box">
+        <h3 class="text-lg font-bold">
+          Are you sure you want to remove this platform?
+        </h3>
+        <p class="py-4">This action cannot be undone.</p>
+        <div class="modal-action">
+          <form method="dialog" class="flex gap-4">
+            <button class="btn">Cancel</button>
+            <button class="btn btn-error" (click)="onRemovePlatform()">
+              Remove
+            </button>
+          </form>
+        </div>
+      </div>
+    </dialog>
   </div>
   <br />
   <div>
